third_party/move/move-compiler/tests/move_check/v2_tests/bytecode-generator/wildcard7.exp
warning[W09003]: unused assignment
  ┌─ tests/move_check/v2_tests/bytecode-generator/wildcard7.move:6:17
  │
6 │         let (_, q) = (x, z);
  │                 ^ Unused assignment or binding for local 'q'. Consider removing, replacing with '_', or prefixing with '_' (e.g., '_q')

error[E06002]: use of unassigned variable
  ┌─ tests/move_check/v2_tests/bytecode-generator/wildcard7.move:6:23
  │
5 │         let y = move x;
  │                 ------
  │                 │
  │                 The value of 'x' was previously moved here.
  │                 Suggestion: use 'copy x' to avoid the move.
6 │         let (_, q) = (x, z);
  │                       ^ Invalid usage of previously moved variable 'x'.

